Media Controls: do not rotate to fullscreen when controlsList=nofullscreen.

Bug: 890602
Change-Id: I7c271882ec632670caf555316e53d9baeba45294
Reviewed-on: https://chromium-review.googlesource.com/c/1260513
Commit-Queue: Mounir Lamouri <mlamouri@chromium.org>
Reviewed-by: Tommy Steimel <steimel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#596739}